Made minor changes to docker-compose file

--- a/views/partials/signIn.templ
+++ b/views/partials/signIn.templ
@@ -69,7 +69,7 @@ templ SignIn() {
 								class="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm"
 							/>
 						</div>
-						<div class="col-span-6 sm:col-span-3">
+						<div class="col-span-6">
 							<label for="Password" class="block text-sm font-medium text-gray-700">Password </label>
 							<input
 								type="password"
