--- a/views/admin_views/adminView.templ
+++ b/views/admin_views/adminView.templ
@@ -1,10 +1,9 @@
 package adminviews
 
 import "n1h41/marketplace/views"
-import "n1h41/marketplace/views/partials"
 
 templ AdminView() {
-	@views.Base(false) {
-    @partials.SignIn()
+	@views.Base(true) {
+		<h1>Testing</h1>
 	}
 }
