--- a/views/admin_views/adminView.templ
+++ b/views/admin_views/adminView.templ
@@ -9,7 +9,7 @@ templ AdminView() {
 				<div>
 					<div class="inline-flex size-16 items-center justify-center">
 						<span class="grid size-10 place-content-center rounded-lg bg-gray-100 text-xs text-gray-600">
-							L
+							A
 						</span>
 					</div>
 					<div class="border-t border-gray-100">
@@ -17,7 +17,7 @@ templ AdminView() {
 							<div class="py-4">
 								<a
 									href="#"
-									class="t group relative flex justify-center rounded bg-blue-50 px-2 py-1.5 text-blue-700"
+									class="group relative flex justify-center rounded px-2 py-1.5 text-gray-500 hover:bg-gray-50 hover:text-gray-700"
 								>
 									<svg
 										xmlns="http://www.w3.org/2000/svg"
@@ -30,18 +30,13 @@ templ AdminView() {
 										<path
 											stroke-linecap="round"
 											stroke-linejoin="round"
-											d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
-										></path>
-										<path
-											stroke-linecap="round"
-											stroke-linejoin="round"
-											d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+											d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
 										></path>
 									</svg>
 									<span
 										class="invisible absolute start-full top-1/2 ms-4 -translate-y-1/2 rounded bg-gray-900 px-2 py-1.5 text-xs font-medium text-white group-hover:visible"
 									>
-										General
+										Account
 									</span>
 								</a>
 							</div>
@@ -124,32 +119,6 @@ templ AdminView() {
 										</span>
 									</a>
 								</li>
-								<li>
-									<a
-										href="#"
-										class="group relative flex justify-center rounded px-2 py-1.5 text-gray-500 hover:bg-gray-50 hover:text-gray-700"
-									>
-										<svg
-											xmlns="http://www.w3.org/2000/svg"
-											class="size-5 opacity-75"
-											fill="none"
-											viewBox="0 0 24 24"
-											stroke="currentColor"
-											stroke-width="2"
-										>
-											<path
-												stroke-linecap="round"
-												stroke-linejoin="round"
-												d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
-											></path>
-										</svg>
-										<span
-											class="invisible absolute start-full top-1/2 ms-4 -translate-y-1/2 rounded bg-gray-900 px-2 py-1.5 text-xs font-medium text-white group-hover:visible"
-										>
-											Account
-										</span>
-									</a>
-								</li>
 							</ul>
 						</div>
 					</div>
@@ -183,6 +152,193 @@ templ AdminView() {
 					</form>
 				</div>
 			</div>
+			<!--
+  Heads up! 👋
+
+  This component comes with some `rtl` classes. Please remove them if they are not needed in your project.
+-->
+			<section>
+				<div class="max-w-screen-xl px-4 py-8 sm:px-6 sm:py-12 lg:px-8 lg:py-16">
+					<div class="grid grid-cols-1 gap-y-8 lg:grid-cols-2 lg:items-center lg:gap-x-16">
+						<div class="grid grid-cols-2 gap-4 sm:grid-cols-3">
+							<a
+								class="block rounded-xl border border-gray-100 p-4 shadow-sm hover:border-gray-200 hover:ring-1 hover:ring-gray-200 focus:outline-none focus:ring"
+								href="#"
+							>
+								<span class="inline-block rounded-lg bg-gray-50 p-3">
+									<svg
+										class="h-6 w-6"
+										fill="none"
+										stroke="currentColor"
+										viewBox="0 0 24 24"
+										xmlns="http://www.w3.org/2000/svg"
+									>
+										<path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+										<path
+											d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+										></path>
+										<path
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="2"
+											d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+										></path>
+									</svg>
+								</span>
+								<h2 class="mt-2 font-bold">Accountant</h2>
+								<p class="hidden sm:mt-1 sm:block sm:text-sm sm:text-gray-600">
+									Lorem ipsum dolor sit amet consectetur.
+								</p>
+							</a>
+							<a
+								class="block rounded-xl border border-gray-100 p-4 shadow-sm hover:border-gray-200 hover:ring-1 hover:ring-gray-200 focus:outline-none focus:ring"
+								href="#"
+							>
+								<span class="inline-block rounded-lg bg-gray-50 p-3">
+									<svg
+										class="h-6 w-6"
+										fill="none"
+										stroke="currentColor"
+										viewBox="0 0 24 24"
+										xmlns="http://www.w3.org/2000/svg"
+									>
+										<path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+										<path
+											d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+										></path>
+										<path
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="2"
+											d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+										></path>
+									</svg>
+								</span>
+								<h2 class="mt-2 font-bold">Accountant</h2>
+								<p class="hidden sm:mt-1 sm:block sm:text-sm sm:text-gray-600">
+									Lorem ipsum dolor sit amet consectetur.
+								</p>
+							</a>
+							<a
+								class="block rounded-xl border border-gray-100 p-4 shadow-sm hover:border-gray-200 hover:ring-1 hover:ring-gray-200 focus:outline-none focus:ring"
+								href="#"
+							>
+								<span class="inline-block rounded-lg bg-gray-50 p-3">
+									<svg
+										class="h-6 w-6"
+										fill="none"
+										stroke="currentColor"
+										viewBox="0 0 24 24"
+										xmlns="http://www.w3.org/2000/svg"
+									>
+										<path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+										<path
+											d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+										></path>
+										<path
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="2"
+											d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+										></path>
+									</svg>
+								</span>
+								<h2 class="mt-2 font-bold">Accountant</h2>
+								<p class="hidden sm:mt-1 sm:block sm:text-sm sm:text-gray-600">
+									Lorem ipsum dolor sit amet consectetur.
+								</p>
+							</a>
+							<a
+								class="block rounded-xl border border-gray-100 p-4 shadow-sm hover:border-gray-200 hover:ring-1 hover:ring-gray-200 focus:outline-none focus:ring"
+								href="#"
+							>
+								<span class="inline-block rounded-lg bg-gray-50 p-3">
+									<svg
+										class="h-6 w-6"
+										fill="none"
+										stroke="currentColor"
+										viewBox="0 0 24 24"
+										xmlns="http://www.w3.org/2000/svg"
+									>
+										<path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+										<path
+											d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+										></path>
+										<path
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="2"
+											d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+										></path>
+									</svg>
+								</span>
+								<h2 class="mt-2 font-bold">Accountant</h2>
+								<p class="hidden sm:mt-1 sm:block sm:text-sm sm:text-gray-600">
+									Lorem ipsum dolor sit amet consectetur.
+								</p>
+							</a>
+							<a
+								class="block rounded-xl border border-gray-100 p-4 shadow-sm hover:border-gray-200 hover:ring-1 hover:ring-gray-200 focus:outline-none focus:ring"
+								href="#"
+							>
+								<span class="inline-block rounded-lg bg-gray-50 p-3">
+									<svg
+										class="h-6 w-6"
+										fill="none"
+										stroke="currentColor"
+										viewBox="0 0 24 24"
+										xmlns="http://www.w3.org/2000/svg"
+									>
+										<path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+										<path
+											d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+										></path>
+										<path
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="2"
+											d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+										></path>
+									</svg>
+								</span>
+								<h2 class="mt-2 font-bold">Accountant</h2>
+								<p class="hidden sm:mt-1 sm:block sm:text-sm sm:text-gray-600">
+									Lorem ipsum dolor sit amet consectetur.
+								</p>
+							</a>
+							<a
+								class="block rounded-xl border border-gray-100 p-4 shadow-sm hover:border-gray-200 hover:ring-1 hover:ring-gray-200 focus:outline-none focus:ring"
+								href="#"
+							>
+								<span class="inline-block rounded-lg bg-gray-50 p-3">
+									<svg
+										class="h-6 w-6"
+										fill="none"
+										stroke="currentColor"
+										viewBox="0 0 24 24"
+										xmlns="http://www.w3.org/2000/svg"
+									>
+										<path d="M12 14l9-5-9-5-9 5 9 5z"></path>
+										<path
+											d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"
+										></path>
+										<path
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="2"
+											d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+										></path>
+									</svg>
+								</span>
+								<h2 class="mt-2 font-bold">Accountant</h2>
+								<p class="hidden sm:mt-1 sm:block sm:text-sm sm:text-gray-600">
+									Lorem ipsum dolor sit amet consectetur.
+								</p>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
 		</div>
 	}
 }
