--- a/views/partials/add_product_form.templ
+++ b/views/partials/add_product_form.templ
@@ -15,11 +15,28 @@ templ AddProductForm() {
 			<div class="mb-5">
 				<label for="ProductName" class="block text-xs font-medium text-gray-700">Price </label>
 				<input
-					type="text"
+					type="number"
 					id="ProductName"
 					placeholder="Price"
 					class="mt-1 w-full rounded-md border-gray-200 shadow-sm sm:text-sm"
 				/>
+			</div>
+			<div class="mb-5">
+				<label for="StockQuantity" class="block text-xs font-medium text-gray-700">Stock Quantity </label>
+				<div class="flex items-center rounded border border-gray-200">
+					<button type="button" class="size-10 leading-10 text-gray-600 transition hover:opacity-75">
+						&minus;
+					</button>
+					<input
+						type="number"
+						id="StockQuantity"
+						value="1"
+						class="h-10 w-full border-transparent text-center [-moz-appearance:_textfield] sm:text-sm [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
+					/>
+					<button type="button" class="size-10 leading-10 text-gray-600 transition hover:opacity-75">
+						&plus;
+					</button>
+				</div>
 			</div>
 			<div class="mb-5">
 				<label for="ImageUrl" class="block text-xs font-medium text-gray-700">Image URL</label>
