--- a/views/partials/admin_product_section.templ
+++ b/views/partials/admin_product_section.templ
@@ -60,9 +60,9 @@ templ AdminProductSection() {
 								></path>
 							</svg>
 						</span>
-						<h2 class="mt-2 font-bold">Accountant</h2>
+						<h2 class="mt-2 font-bold">List Products</h2>
 						<p class="hidden sm:mt-1 sm:block sm:text-sm sm:text-gray-600">
-							Lorem ipsum dolor sit amet consectetur.
+							List all products in the marketplace.
 						</p>
 					</a>
 					<a
