--- a/views/partials/admin_product_section.templ
+++ b/views/partials/admin_product_section.templ
@@ -4,7 +4,7 @@ templ AdminProductSection() {
 	<section id="product-section" class="w-full ">
 		<div class="w-full px-4 py-8 sm:px-6 sm:py-12 lg:px-8 lg:py-16">
 			<div class="grid grid-cols-1 gap-y-8">
-				<div class="grid grid-cols-1 lg:grid-cols-5 gap-1 lg:gap-4 overflow-y-auto">
+				<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-1 lg:gap-4 overflow-y-auto">
 					<a
 						hx-target="#product-section"
 						hx-get="/admin/products/add"
@@ -31,7 +31,7 @@ templ AdminProductSection() {
 								></path>
 							</svg>
 						</span>
-						<h2 class="mt-2 lg:font-bold">Add product</h2>
+						<h2 class="mt-2 font-bold">Add product</h2>
 						<p class="hidden sm:mt-1 sm:block sm:text-sm sm:text-gray-600">
 							Add product to the marketplace.
 						</p>
