Implemented ui section to upload file, which can temporarily hold the while before uploading

--- a/views/base.templ
+++ b/views/base.templ
@@ -10,6 +10,7 @@ templ Base(showNavbar bool) {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link rel="stylesheet" href="/static/css/styles.css"/>
 			<script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
+			<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 			<title>Store</title>
 		</head>
 		<body>
