--- a/views/admin_views/adminView.templ
+++ b/views/admin_views/adminView.templ
@@ -17,11 +17,14 @@ templ AdminView() {
 						<div class="px-2">
 							<div class="py-4">
 								<a
+									x-data="{ selectedSection: 'product' }"
 									hx-get="/admin/products"
 									hx-target="#main-section"
 									hx-swap="innerHTML"
 									href="/admin/products"
-									class="group relative flex justify-center rounded px-2 py-1.5 text-gray-500 hover:bg-gray-50 hover:text-gray-700"
+									x-on:click="selectedSection = 'product'"
+									:class="selectedSection == 'product' ? 'text-blue-500 bg-gray-50' : ''"
+									class="group relative flex justify-center rounded px-2 py-1.5 text-gray-500 hover:bg-gray-50 hover:text-blue-700"
 								>
 									<svg
 										xmlns="http://www.w3.org/2000/svg"
