--- a/views/partials/add_product_form.templ
+++ b/views/partials/add_product_form.templ
@@ -5,6 +5,8 @@ templ AddProductForm() {
 		action=""
 		x-data="{
       productName: undefined,
+      productPrice: undefined,
+      productStockQuantity: undefined,
     }"
 	>
 		<div class="flex flex-col md:flex-row w-full mt-4">
@@ -24,6 +26,7 @@ templ AddProductForm() {
 					<div class="mb-5 w-full">
 						<label for="ProductPrice" class="block text-xs font-medium text-gray-700">Price </label>
 						<input
+							x-model.number="productPrice"
 							type="number"
 							id="ProductPrice"
 							placeholder="Price"
@@ -36,17 +39,17 @@ templ AddProductForm() {
 							x-data="{ stockQuantity: 0 }"
 							class="flex items-center rounded border border-gray-200"
 						>
-							<button x-on:click="stockQuantity--" type="button" class="size-10 leading-10 text-gray-600 transition hover:opacity-75">
+							<button x-on:click="productStockQuantity--" type="button" class="size-10 leading-10 text-gray-600 transition hover:opacity-75">
 								&minus;
 							</button>
 							<input
-								x-model="stockQuantity"
+								x-model.number="productStockQuantity"
 								type="number"
 								id="StockQuantity"
 								value="0"
 								class="h-10 w-full border-transparent text-center [-moz-appearance:_textfield] sm:text-sm [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
 							/>
-							<button x-on:click="stockQuantity++" type="button" class="size-10 leading-10 text-gray-600 transition hover:opacity-75">
+							<button x-on:click="productStockQuantity++" type="button" class="size-10 leading-10 text-gray-600 transition hover:opacity-75">
 								&plus;
 							</button>
 						</div>
@@ -62,18 +65,33 @@ templ AddProductForm() {
 							placeholder="URL"
 							class="mt-1 w-full rounded-md border-gray-200 shadow-sm sm:text-sm"
 						/>
-						<div x-on:click="imageUrls.push(url); url = ''" class="cursor-pointer ml-1 flex items-center justify-center border p-1 rounded-md px-5 text-white bg-blue-500">
+						<div
+							x-on:click="
+            if (!url || url.length == 0) {
+              return;
+            }
+            if (imageUrls.includes(url)) {
+              url = '';
+              return;
+            }
+            imageUrls.push(url);
+            url = '';
+            "
+							class="cursor-pointer ml-1 flex items-center justify-center border p-1 rounded-md px-5 text-white bg-blue-500"
+						>
 							<span class="select-none">Add</span>
 						</div>
 						<div x-show:="imageUrls.length > 0" x-on:click="imageUrls = []" class="cursor-pointer ml-1 flex items-center justify-center border p-1 rounded-md px-5 text-white bg-gray-500">
 							<span>Clear</span>
 						</div>
 					</div>
-					<ul class="grid grid-cols-3 gap-1 mt-1">
+					<ul class="grid grid-cols-3 gap-1 mt-2">
 						<template x-for="imageUrl in imageUrls">
-							<li class="py-2 px-3 border rounded-md bg-gray-300 border-gray-400">
-								<span x-text="imageUrl"></span>
-								<img :src="imageUrl" alt=""/>
+							<li class="py-1 px-1 border rounded-md bg-gray-300 border-gray-400">
+								<img :src="imageUrl" class="rounded-md object-cover" :alt="imageUrl.split('/').last"/>
+								<div class="flex flex-row justify-end items-end">
+									<span x-on:click="imageUrls = imageUrls.filter(item => item != imageUrl)" class="mt-1 cursor-pointer text-red-500 text-xs font-bold">DELETE</span>
+								</div>
 							</li>
 						</template>
 					</ul>
