Added field to add multiple image urls, made the add prodcut form responsive

--- a/views/admin_views/adminView.templ
+++ b/views/admin_views/adminView.templ
@@ -1,7 +1,9 @@
 package adminviews
 
-import "n1h41/marketplace/views"
-import "n1h41/marketplace/views/partials"
+import (
+	"n1h41/marketplace/views"
+	"n1h41/marketplace/views/partials"
+)
 
 templ AdminView() {
 	@views.Base(false) {
