--- a/views/partials/add_product_form.templ
+++ b/views/partials/add_product_form.templ
@@ -6,10 +6,10 @@ templ AddProductForm() {
 		x-data="{
       productName: undefined,
       productPrice: undefined,
-      productStockQuantity: undefined,
+      productStockQuantity: 1,
     }"
 	>
-		<div class="flex flex-col md:flex-row w-full mt-4">
+		<div class="overflow-y-auto flex flex-col md:flex-row w-full mt-4">
 			<div class="flex-col md:mr-8 flex flex-1">
 				<div class="mb-5">
 					<label for="ProductName" class="block text-xs font-medium text-gray-700">Product Name </label>
@@ -22,8 +22,8 @@ templ AddProductForm() {
 					/>
 					<span x-show="productName && productName.length < 3" class="text-red-500">Enter a valid product name</span>
 				</div>
-				<div class="flex space-x-2 w-full">
-					<div class="mb-5 w-full">
+				<div class="flex flex-col sm:flex-row sm:space-x-2 w-full">
+					<div class="mb-5 sm:w-1/2">
 						<label for="ProductPrice" class="block text-xs font-medium text-gray-700">Price </label>
 						<input
 							x-model.number="productPrice"
@@ -33,13 +33,21 @@ templ AddProductForm() {
 							class="h-10 w-full rounded-md border-gray-200 shadow-sm sm:text-sm"
 						/>
 					</div>
-					<div class="mb-5">
+					<div class="m-0 mb-5 sm:w-1/2">
 						<label for="StockQuantity" class="block text-xs font-medium text-gray-700">Stock Quantity </label>
 						<div
-							x-data="{ stockQuantity: 0 }"
-							class="flex items-center rounded border border-gray-200"
+							class="flex items-center rounded-md shadow-sm border border-gray-200"
 						>
-							<button x-on:click="productStockQuantity--" type="button" class="size-10 leading-10 text-gray-600 transition hover:opacity-75">
+							<button
+								x-on:click="
+              if (productStockQuantity == 0) {
+                return;
+              }
+              productStockQuantity--
+              "
+								type="button"
+								class="px-3 lg:px-2 size-10 leading-10 text-gray-600 transition hover:opacity-75"
+							>
 								&minus;
 							</button>
 							<input
@@ -49,7 +57,13 @@ templ AddProductForm() {
 								value="0"
 								class="h-10 w-full border-transparent text-center [-moz-appearance:_textfield] sm:text-sm [&::-webkit-inner-spin-button]:m-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:m-0 [&::-webkit-outer-spin-button]:appearance-none"
 							/>
-							<button x-on:click="productStockQuantity++" type="button" class="size-10 leading-10 text-gray-600 transition hover:opacity-75">
+							<button
+								x-on:click="
+              productStockQuantity++
+              "
+								type="button"
+								class="px-3 lg:px-2 size-10 leading-10 text-gray-600 transition hover:opacity-75"
+							>
 								&plus;
 							</button>
 						</div>
