Squashed commit of the following:
commit 06498a3cd3427968677e44bf27dae7412ec51f00
Author: n1h41 <nihalninu25@gmail.com>
Date:   Mon Jul 15 23:51:17 2024 +0530

    Fixed issue where multiple files where not uploaded when new product details is being added

commit 21aeee1e760a8c2d2cd3059c6e693fc007e0ac33
Author: n1h41 <nihalninu25@gmail.com>
Date:   Wed Jul 10 23:12:42 2024 +0530

    Added field to add multiple image urls, made the add prodcut form responsive

    WIP

--- a/views/admin_views/adminView.templ
+++ b/views/admin_views/adminView.templ
@@ -8,7 +8,7 @@ import (
 templ AdminView() {
 	@views.Base(false) {
 		<div class="flex">
-			<div class="flex h-screen w-16 flex-col justify-between border-e bg-white">
+			<div class="flex h-screen w-16 flex-col justify-between border-e bg-white fixed">
 				<div>
 					<div class="inline-flex size-16 items-center justify-center">
 						<span class="grid size-10 place-content-center rounded-lg bg-gray-100 text-xs text-gray-600">
@@ -111,12 +111,7 @@ templ AdminView() {
 					</a>
 				</div>
 			</div>
-			<!--
-  Heads up! 👋
-
-  This component comes with some `rtl` classes. Please remove them if they are not needed in your project.
--->
-			<div id="main-section" class="w-full">
+			<div id="main-section" class="pl-16 flex flex-col overflow-y-auto flex-grow">
 				@partials.AdminProductSection()
 			</div>
 		</div>
