--- a/views/partials/admin_product_section.templ
+++ b/views/partials/admin_product_section.templ
@@ -39,6 +39,9 @@ templ AdminProductSection() {
 						</p>
 					</a>
 					<a
+						hx-target="#product-section-grid"
+						hx-swap="outerHTML"
+						hx-get="/admin/categories"
 						class="block rounded-xl border border-gray-100 p-4 shadow-sm hover:border-gray-200 hover:ring-1 hover:ring-gray-200 focus:outline-none focus:ring"
 						href="#"
 					>
@@ -62,7 +65,7 @@ templ AdminProductSection() {
 								></path>
 							</svg>
 						</span>
-						<h2 class="mt-2">List Products</h2>
+						<h2 class="mt-2">Categories</h2>
 						<p class="hidden sm:mt-1 sm:block sm:text-sm sm:text-gray-600">
 							List all products in the marketplace.
 						</p>
