minor issue fixes

--- a/views/partials/admin_product_section.templ
+++ b/views/partials/admin_product_section.templ
@@ -4,7 +4,7 @@ templ AdminProductSection() {
 	<section id="product-section">
 		<div class="px-4 py-8 sm:px-6 sm:py-12 lg:px-8 lg:py-16">
 			<span hx-swap="outerHTML" id="path-text" class="py-4 text-sm text-gray-500">Product Section</span>
-			<div class="grid grid-cols-1 gap-y-8">
+			<div class="mt-5 grid grid-cols-1 gap-y-8">
 				<div id="product-section-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-3 lg:gap-4 overflow-y-auto p-2">
 					<a
 						hx-target="#product-section-grid"
