--- a/views/partials/list_categories.templ
+++ b/views/partials/list_categories.templ
@@ -2,7 +2,7 @@ package partials
 
 templ ListCategories() {
 	<div id="category-list">
-		<div class="flex mt-1">
+		<div class="flex mt-5">
 			<a
 				class="inline-block rounded border border-indigo-600 bg-indigo-600 px-12 py-3 text-sm font-medium text-white hover:bg-transparent hover:text-indigo-600 focus:outline-none focus:ring active:text-indigo-500"
 				hx-get="/admin/categories/add"
@@ -13,4 +13,9 @@ templ ListCategories() {
 			</a>
 		</div>
 	</div>
+	<span hx-swap-oob="true" id="path-text" class="py-4 text-sm text-gray-500">
+		<a href="/admin/products" hx-target="#main-section" hx-get="/admin/products">Product Section</a>
+		>
+		Category
+	</span>
 }
