--- a/views/partials/add_product_form.templ
+++ b/views/partials/add_product_form.templ
@@ -139,7 +139,7 @@ templ AddProductForm() {
 		</div>
 	</form>
 	<span hx-swap-oob="true" id="path-text" class="py-4 text-sm text-gray-500">
-		<a href="/admin/products" hx-target="#main-section" hx-get="/admin/products">Product Section</a>
+		<a href="/admin/products" hx-target="#main-section" hx-get="/admin/products">Product</a>
 		>
 		Add Product
 	</span>
