--- a/views/partials/admin_product_section.templ
+++ b/views/partials/admin_product_section.templ
@@ -5,10 +5,10 @@ templ AdminProductSection() {
 		<div class="px-4 py-8 sm:px-6 sm:py-12 lg:px-8 lg:py-16">
 			<span hx-swap="outerHTML" id="path-text" class="py-4 text-sm text-gray-500">Product</span>
 			<div class="mt-5 grid grid-cols-1 gap-y-8">
-				<div id="product-section-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-3 lg:gap-4 overflow-y-auto p-2">
+				<div id="product-section-grid" class="sample-transition grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-3 lg:gap-4 overflow-y-auto p-2">
 					<a
 						hx-target="#product-section-grid"
-						hx-swap="outerHTML"
+						hx-swap="outerHTML transition:true"
 						hx-get="/admin/products/add"
 						class="block rounded-xl border border-gray-100 p-4 shadow-sm hover:border-gray-200 hover:ring-1 hover:ring-gray-200 focus:outline-none focus:ring"
 						href="#"
@@ -40,7 +40,7 @@ templ AdminProductSection() {
 					</a>
 					<a
 						hx-target="#product-section-grid"
-						hx-swap="outerHTML"
+						hx-swap="outerHTML transition:true"
 						hx-get="/admin/categories"
 						class="block rounded-xl border border-gray-100 p-4 shadow-sm hover:border-gray-200 hover:ring-1 hover:ring-gray-200 focus:outline-none focus:ring"
 						href="#"
