--- a/views/partials/create_category.templ
+++ b/views/partials/create_category.templ
@@ -7,19 +7,20 @@ import (
 
 templ CreateCategory(categoryList []productdmn.Category) {
 	<div
+		class="sample-transition"
 		id="create-category-section"
 		x-data="{ 
       has_parent_category: false,
       category_name: undefined,
       parent_id: undefined
     }"
-		hx-swap="outerHTML"
+		hx-swap="outerHTML transition:true"
 	>
 		<form
 			id="create-category-form"
 			hx-post="/admin/categories/add"
 			hx-target="#create-category-section"
-			class="flex flex-col mt-5 md:pl-20 xl:pl-72 2xl:pl-96 md:pr-20 xl:pr-72 2xl:pr-96"
+			class="flex flex-col mt-5 md:px-20 xl:px-72 2xl:px-96"
 		>
 			<div>
 				<label for="categoryName" class="block text-sm font-medium text-gray-900">Category Name </label>
@@ -73,7 +74,9 @@ templ CreateCategory(categoryList []productdmn.Category) {
 				>
 					<option value="">Please select one</option>
 					for _, item := range categoryList {
-						<option value={ strconv.Itoa(item.Id) }>{ item.Name }</option>
+						if !item.IsSubCategory {
+							<option value={ strconv.Itoa(item.Id) }>{ item.Name }</option>
+						}
 					}
 				</select>
 			</div>
@@ -90,9 +93,9 @@ templ CreateCategory(categoryList []productdmn.Category) {
 		</form>
 	</div>
 	<span hx-swap-oob="true" id="path-text" class="py-4 text-sm text-gray-500">
-		<a href="/admin/products" hx-target="#main-section" hx-get="/admin/products">Product</a>
+		<a href="/admin/products" hx-swap="innerHTML transition:true" hx-target="#main-section" hx-get="/admin/products">Product</a>
 		>
-		<a href="/admin/products" hx-swap="outerHTML" hx-target="#create-category-section" hx-get="/admin/categories">Category</a>
+		<a href="/admin/products" hx-swap="outerHTML transition:true" hx-target="#create-category-section" hx-get="/admin/categories">Category</a>
 		>
 		Add
 	</span>
