--- a/views/partials/list_categories.templ
+++ b/views/partials/list_categories.templ
@@ -5,14 +5,14 @@ import "n1h41/marketplace/internal/domain/productdmn"
 templ ListCategories(categories []productdmn.Category) {
 	<div
 		id="category-list"
-		class="flex flex-col"
+		class="flex flex-col sample-transition md:px-20 xl:px-72 2xl:px-96"
 	>
 		<div class="flex mt-5">
 			<a
 				class="inline-block rounded border border-indigo-600 bg-indigo-600 px-12 py-3 text-sm font-medium text-white hover:bg-transparent hover:text-indigo-600 focus:outline-none focus:ring active:text-indigo-500"
 				hx-get="/admin/categories/add"
 				hx-target="#category-list"
-				hx-swap="outerHTML"
+				hx-swap="outerHTML transition:true"
 			>
 				Create
 			</a>
@@ -36,7 +36,7 @@ templ ListCategories(categories []productdmn.Category) {
 										if item.Id == subItem.Parent {
 											<li>
 												<span
-													class="text-blue-700"
+													class="text-blue-700 underline"
 												>
 													{ subItem.Name }
 												</span>
@@ -52,7 +52,7 @@ templ ListCategories(categories []productdmn.Category) {
 		</div>
 	</div>
 	<span hx-swap-oob="true" id="path-text" class="py-4 text-sm text-gray-500">
-		<a href="/admin/products" hx-target="#main-section" hx-get="/admin/products">Product</a>
+		<a href="/admin/products" hx-swap="innerHTML transition:true" hx-target="#main-section" hx-get="/admin/products">Product</a>
 		>
 		Category
 	</span>
